Modifying the message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Auth sample site</title>
 </head>
 <body>
-    <div id="message">This is Staged "From Dev Branch"</div>
+    <div id="message"></div>
+    <div> This is Staged "From Dev Branch" </div>
     <script src="index.js"></script>
 </body>
 </html>
