--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="message"></div>
-    <div> This is Staged "From Dev Branch" - Let me call it Dev </div>
+    <div> This is Staged -Dev </div>
     <script src="index.js"></script>
 </body>
 </html>
